# crt_like_shader

./: Cargo.toml  README.md  index.html  wasm-binds.js
assets/shader/: texture.wgsl
res/: game_config.toml
res/shader/: colour_tile.wgsl  crt.wgsl  post_crt.wgsl  texture.wgsl
src/: buffer.rs  config.rs  lib.rs  main.rs  renderer.rs  resources.rs
