[package]
name = "crt_like_js_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
wgpu = "0.18.0"
winit = { version = "0.29", features = ["rwh_05"]}
bytemuck = {version = "1.14.0",features = ["derive"]}
image = "0.24.7"
pollster = "0.3.0"
cgmath = "0.18.0"
