[package]
name = "crt_like_js_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]



[dependencies]
cfg-if = "1.0.0"
wgpu = "0.18.0"
winit = { version = "0.29", features = ["rwh_05"]}
bytemuck = {version = "1.14.0",features = ["derive"]}
image = "0.24.7"
pollster = "0.3.0"
cgmath = "0.18.0"
log = "0.4.20"
anyhow = { version = "1.0.75", features = [] }
toml = "0.8.6"
serde = {version =  "1.0.190",features = ["derive"] }
instant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = "0.11"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "0.18.0", features = ["webgl"]}
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
js-sys = "0.3.65"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }


[build-dependencies]
anyhow = "1.0.75"
fs_extra = "1.2"
glob = "0.3"
